# magicTower

./: CMakeLists.txt  README.md  newbuild-2012.bat
Classes/: AppDelegate.cpp  GameData.cpp  GameData.h  GameLayer.cpp  GameLayer.h  HeroInfoLayer.cpp  HeroInfoLayer.h  KeyInfoLayer.cpp  KeyInfoLayer.h  MainFrameLayer.cpp  MainFrameLayer.h  MainGameScene.cpp  MainGameScene.h  MenuLayer.cpp  MenuLayer.h  MirrorAction.cpp  MirrorAction.h  MultiLangMgr.cpp  MultiLangMgr.h  TalkingLayer.cpp  TalkingLayer.h  stringdef.h
Resources/: string.plist
Resources/texture/: hero.plist  mt.plist
Resources/ui/: mainFrameUI.json
magicTower_res/: mt.as  mt.txt
magicTower_res/magicTower/: magicTower.xml.ccsproj
magicTower_res/magicTower/CocoStudio/ccsprojs/mainUI/: mainUI.xml.ui
magicTower_res/magicTower/CocoStudio/ccsprojs/mainUI/Json/: mainFrameUI.json
magicTower_res/res/imgs/: background.plist  background.spxml  background.tps  door.plist  door.spxml  hero.spxml  hero.tps  monster.plist  monster.spxml  monster.tps  mt.plist  mt.tps  npc.plist  npc.tps  props.plist  props.tps
proj.android/: AndroidManifest.xml  build.xml
proj.android/res/values/: strings.xml
proj.ios_mac/magicTower.xcodeproj/: project.pbxproj
proj.win32/: magicTower.sln  magicTower.vcxproj  magicTower.vcxproj.filters
